fix(waybar): more various fixes to spacing and improved locale for date

--- a/modules/hyprland/waybar/style.css
+++ b/modules/hyprland/waybar/style.css
@@ -91,6 +91,7 @@ tooltip * {
 #clock {
   padding: 0 0 0 1.5em;
   border-radius: 10px 0px 0px 10px;
+  padding-right: 0.5em;
 }
 
 #custom-weather {
